--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,24 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Que manger aujourd'hui ? 
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-item>
+    <ion-label>Catégories</ion-label>
+    <ion-select (ionChange)="filterByCategory($event)" multiple="true" placeholder="Choisir une catégorie">
+      <ion-select-option *ngFor="let category of categories" value="{{ category.strCategory }}">
+        {{ category.strCategory }}
+      </ion-select-option>
+    </ion-select>
+  </ion-item>
+  <ion-grid fixed *ngIf="meals">
+    <ion-row *ngFor="let meal of meals" [routerLink]="'/meal/' + meal.idMeal">
+      <ion-col size="6">{{ meal.strMeal }}</ion-col>
+      <ion-col size="6"><ion-img [src]="meal.strMealThumb"></ion-img></ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
